# test_dependabot

./: .gitmodules  pyproject.toml
.github/: dependabot.yml
.github/workflows/: code-quality-pr.yaml
